--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -71,7 +71,7 @@
 
    			<div class="col-twelve">
 
-	   			<h5>Bem Vindo</h5>
+	   			<h5>Welcome</h5>
 	   			<h1>Cibele Castelo</h1>
 
 	   			<p class="intro-position">
@@ -79,7 +79,7 @@
 	   				<span>Python Developer</span> 
 	   			</p>
 
-	   			<a class="button stroke smoothscroll" href="#about" title="">Mais Sobre Mim</a>
+	   			<a class="button stroke smoothscroll" href="#about" title="">More about me</a>
 
 	   		</div>  
    			
@@ -114,7 +114,7 @@
 
    				<img src="{% static "blog/images/profile-pic.jpg" %}" alt="Profile Picture">
 
-   				<p class="lead text-align-justify"> Ama desafios e possui extrema paixão com tecnologia, possui interesse na área de ciência de dados, machine learning e inteligência artificial. Possui facilidade e empenho em aprender novas tecnologias.Deseja trabalhar em uma empresa/startup que possibilite o crescimento, compartilhamento e inovação.</p>
+   				<p class="lead text-align-justify">Loves challenges and has extreme passion for technology, has interest in the area of ​​data science, machine learning and IA. Loves to learn new technologies. At the moment, working as a Freelancer with ETL, data cleaning, data processing,...</p>
 				
    			</div>   			
 
@@ -127,22 +127,22 @@
 
    			<h3>Profile</h3>
 
-   			<p align="justify">Graduada em Sistemas de Informação pelo Centro Universitário Newton Paiva e Engenheira de Machine Learning pela Udacity.  
- 
-Experiência com projetos de ciência de dados, envolvendo coleta de dados, processamento de dados, análise de dados, criação de modelos preditivos, avaliação de modelos preditivos e apresentação de resultados. Domínio da linguagem de programação python e programa também em R. Já utilizou as principais bibliotecas de ciência de dados como: pandas, seaborn, matplotlib, keras, neupy, numpy,...</p>
+   			<p align="justify">Graduated in Information Systems at Centro Universitário Newton Paiva and Engineer of Machine Learning at Udacity.Experience with data science projects, involving data collection, data processing, data analysis, creation and evaluation of predictive models and storytelling.Domínio da linguagem de programação Python.Domain of the Python programming language.
+
+</p>
 
    			<ul class="info-list">
    				<li>
-   					<strong>Nome:</strong>
+   					<strong>Name:</strong>
    					<span>Cibele Castelo</span>
    				</li>
    				<li>
-   					<strong>Idade:</strong>
-   					<span>24 anos</span>
+   					<strong>Age:</strong>
+   					<span>I'm 24 years old</span>
    				</li>
    				<li>
-   					<strong>Trabalho:</strong>
-   					<span>Procurando uma boa oportunidade</span>
+   					<strong>Work:</strong>
+   					<span>Freelancer</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
@@ -159,17 +159,17 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 
    		<div class="col-six tab-full">
 
-   			<h3>Habilidades</h3>
+   			<h3>Skills</h3>
 
 				<ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent90"><span>90%</span></div>
+				   	<div class="progress percent90"><span>100%</span></div>
 				   	<strong>Python</strong>
 				   </li>
 <ul class="skill-bars">
 				   <li>
-				   	<div class="progress percent80"><span>80%</span></div>
-				   	<strong>SQL</strong>
+				   	<div class="progress percent80"><span>100%</span></div>
+				   	<strong>ETL(data from pdf to excel,csv,xml, etc...)</strong>
 				   </li>
 <li>
 				   	<div class="progress percent80"><span>80%</span></div>
@@ -193,8 +193,8 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 				   </li>
 
 <li>
-				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>Visualização de Dados</strong>
+				   	<div class="progress percent70"><span>80%</span></div>
+				   	<strong>SQL</strong>
 				   </li>
 
 <li>
@@ -253,9 +253,9 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
    		<div class="col-twelve">
 
    			<h5>Curriculum Vitae</h5>
-   			<h1>Mais de minhas credenciais</h1>
+   			<h1>More of my credentials</h1>
 
-   			<p class="lead">Atualmente estou procurando trabalho na área de ciência de dados, posso atuar como analista, desenvolvedora e engenheira de machine learning. Possuo experiência na área por meio de projetos que fiz e competições que participei.</p>
+   			<p class="lead">At the moment I dedicate my time doing freelancer job. I have experience with all the data science cicle, for example, in data collection, I can create an algorithm for extracting data from pdfs and load this data to an excel sheet, and I can do data processing and data cleaning too. I only do jobs that is related with the data science cycle.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -264,7 +264,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 
    		<div class="col-twelve resume-header">
 
-   			<h2>Experiência Profissional</h2>
+   			<h2>Work Experience</h2>
 
    		</div> <!-- /resume-header -->
 
@@ -279,13 +279,13 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Analista de Business Intelligence</h3>
+	   					<h3>Business Intelligence Analyst</h3>
 	   					<p> Mar 2016 - Jun 2016</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>MD2 Consultoria</h4>
-	   					<p align='justify'>Instalações de softwares da IBM utilizados nos Projetos de BI. Programação, práticas e estudos de análise de dados utilizando a ferramenta DataStage Designer e Data Quality, para projetos de ETL.  Outros: Instalação IBM Information Server, Instalação CDD,...Participação de projeto de governança de dados com a utilização da ferramenta Infopshere Information Governance Catalog</p>
+	   					<p align='justify'>IBM software installations used in BI projects. Programming, practices and studies of data analysis using the DataStage Designer and Data Quality tool, for ETL projects. Other: IBM Information Server installation, CDD installation, ... Data governance project participation using Infopshere Information Governance Catalog tool </p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -297,13 +297,13 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Estagiária de TI</h3>
+	   					<h3>Internship</h3>
 	   					<p>Set 2014 - Out 2015</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>Lafarge</h4>
-	   					<p align='justify'>Apoio no desenvolvimento, melhorias, suporte e correções dos softwares aplicativos corporativos e banco de dados da empresa visando garantir o funcionamento e disponibilidades dos mesmos. Além disso, suporte e atendimento aos usuários do sistema.</p>
+	   					<p align='justify'>Support in the development, improvements, support and corrections of the software corporate applications and database of the company in order to guarantee the operation and availability of the same. In addition, support and service to system users.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -318,7 +318,7 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 
    		<div class="col-twelve resume-header">
 
-   			<h2>Formação Acadêmica</h2>
+   			<h2>ACADEMIC BACKGROUND</h2>
 
    		</div> <!-- /resume-header -->
 
@@ -333,13 +333,13 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Nanodegree Engenheira de Machine Learning</h3>
+	   					<h3>Nanodegree Machine Learning ENGINEER</h3>
 	   					<p>Fev 2017 - Nov 2017</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>Udacity</h4>
-	   					<p align='justify'>Especialização de engenheira de machine learning que possibilitou aprender a construir modelos preditivos que possibilitam os computadores a agir, aprender e tomar decisões baseados em dados. Foi abordado conceitos fundamentos de aprendizagem supervisionada, aprendizagem não supervisionada, aprendizagem por reforço e deep learning, além de avaliação e validação de modelos. O projeto final desenvolvido possibilitou realizar todo o ciclo de ciência de dados.</p>
+	   					<p align='justify'>The Nanodegree Machine Learning Engineer made possible the learn of construct predictive models that are used to teach computers how to act, learn and take decisions based on data. It was aborted fundamental concepts about supervised learning, unsupervided learning, reforcing learning and deep learning, and besides that, the avaliation and validation of models. The final project was developed based on all the data science cycle.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -351,13 +351,13 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Graduação Sistemas de Informação</h3>
+	   					<h3>Graduaded in Information's System</h3>
 	   					<p>2011 - Jun 2016</p>
 	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>Centro Universitário Newton Paiva</h4>
-	   					<p align='justify'>Graduada em Sistemas de Informação, este curso possibilitou o meu primeiro contato com tecnologia da informação. Foram desenvolvidos projetos na área de programação,banco de dados, redes e webdesign .</p>
+	   					<p align='justify'>Graduated in Information Systems, this course made possible my first contact with information technology. Projects have been developed in the area of programming, database, networking and webdesign.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -379,9 +379,9 @@ Experiência com projetos de ciência de dados, envolvendo coleta de dados, proc
    		<div class="col-twelve">
 
    			<h5>Portfolio</h5>
-   			<h1>Confira alguns dos meus projetos</h1>
+   			<h1>Check out some of my projects(Most of them are in Portuguese, except the competition of Kaggle</h1>
 
-   			<p class="lead">Alguns projetos abaixo foram desenvolvidos juntamento com o Nanodegree da Udacity, outros foram desenvolvidos para competições.</p>
+   			<p class="lead">Some projects below were developed together with Nanodegree of Udacity, others were developed for competitions.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -648,7 +648,7 @@ seja mais acessível para mais motoristas. Este projeto foi o projeto de conclus
    				<i class="icon-mail"></i>
    			</div>
 
-   			<h5>Me envie um e-mail</h5>
+   			<h5>Send me an e-mail</h5>
 
    			<p>cibele_cast@hotmail.com<br>			     
 			   </p>
