--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -169,7 +169,7 @@
 <ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent80"><span>100%</span></div>
-				   	<strong>ETL(data from pdf to excel,csv,xml, etc...)</strong>
+				   	<strong>ETL(pdf(data) to excel,xml...)</strong>
 				   </li>
 <li>
 				   	<div class="progress percent80"><span>80%</span></div>
@@ -660,7 +660,7 @@ seja mais acessível para mais motoristas. Este projeto foi o projeto de conclus
    				<i class="icon-phone"></i>
    			</div>
 
-   			<h5>Me ligue</h5>
+   			<h5>Call me</h5>
 
    			<p>     
 				Whatsapp: (+31) 995630327<br>
