--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -237,7 +237,7 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Me contrate" class="button stroke smoothscroll">Me contrate</a>
+   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Me contrate</a>
    			<a href="https://drive.google.com/file/d/1Hedb77gr_3lFqQNpjgVQCwoXfXn3bwpF/view?" target="_blank"" usp=sharing  title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
