--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -169,7 +169,7 @@
 <ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent80"><span>100%</span></div>
-				   	<strong>ETL(pdf(data) to excel,xml...)</strong>
+				   	<strong>ETL(data of pdf to excel,xml...)</strong>
 				   </li>
 <li>
 				   	<div class="progress percent80"><span>80%</span></div>
