--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -271,6 +271,27 @@
    		<div class="col-twelve">
 
    			<div class="timeline-wrap">
+				<div class="timeline-block">
+
+	   				<div class="timeline-ico">
+	   					<i class="fa fa-graduation-cap"></i>
+	   				</div>
+
+	   				<div class="timeline-header">
+	   					<h3>Python Developer</h3>
+	   					<p>Dez 2017 -  Jan 2018</p>
+	   				</div>
+
+	   				<div class="timeline-content">
+	   					<h4>Lafarge</h4>
+	   					<p align='justify'>Performed tasks using the language python, regex, pandas, etc. .... activities that were carried out:
+ETL-Unstructured data extraction from pdfs to Excel spreadsheet.
+Web Crawler Script
+Machine Learning Script - Text Classification
+Settings on AWS-ML.</p>
+	   				</div>
+
+	   			</div> <!-- /timeline-block -->
 
    				<div class="timeline-block">
 
