--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -283,7 +283,7 @@
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Lafarge</h4>
+	   					<h4>Mercatório</h4>
 	   					<p align='justify'>Performed tasks using the language python, regex, pandas, etc. .... activities that were carried out:
 ETL-Unstructured data extraction from pdfs to Excel spreadsheet.
 Web Crawler Script
