--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -107,14 +107,14 @@
    	<div class="row section-intro">
    		<div class="col-twelve">
 
-   			<h5>Sobre</h5>
-   			<h1>Perfil</h1>
+   			<h5>About</h5>
+   			<h1>Profile</h1>
 
    			<div class="intro-info">
 
    				<img src="{% static "blog/images/profile-pic.jpg" %}" alt="Profile Picture">
 
-   				<p class="lead text-align-justify">Loves challenges and has extreme passion for technology, has interest in the area of ​​data science, machine learning and IA. Loves to learn new technologies. At the moment, working as a Freelancer with ETL, data cleaning, data processing,...</p>
+   				<p class="lead text-align-justify">Loves challenges and has extreme passion for technology, has interest in the area of ​​data science, machine learning and IA. Loves to learn new technologies. At the moment, looking for a oportunity to work with Data Science.</p>
 				
    			</div>   			
 
@@ -142,7 +142,7 @@
    				</li>
    				<li>
    					<strong>Work:</strong>
-   					<span>Freelancer</span>
+   					<span>Looking for a good opportunity</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
@@ -255,7 +255,7 @@
    			<h5>Curriculum Vitae</h5>
    			<h1>More of my credentials</h1>
 
-   			<p class="lead">At the moment I dedicate my time doing freelancer job. I have experience with all the data science cicle, for example, in data collection, I can create an algorithm for extracting data from pdfs and load this data to an excel sheet, and I can do data processing and data cleaning too. I only do jobs that is related with the data science cycle.</p>
+   			<p class="lead">At the moment I'm looking for a opportunity to work with Data Science. I have experience with all the data science cicle.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -287,7 +287,7 @@
 	   					<p align='justify'>Performed tasks using the language python, regex, pandas, etc. .... activities that were carried out:
 ETL-Unstructured data extraction from pdfs to Excel spreadsheet.
 Web Crawler Script
-Machine Learning Script - Text Classification
+Machine Learning Script - Text Classification.
 Settings on AWS-ML.</p>
 	   				</div>
 
