--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -114,7 +114,7 @@
 
    				<img src="{% static "blog/images/profile-pic.jpg" %}" alt="Profile Picture">
 
-   				<p class="lead text-align-justify">Loves challenges and has extreme passion for technology, has interest in the area of ​​data science, machine learning and IA. Loves to learn new technologies. At the moment, looking for a oportunity to work with Data Science.</p>
+   				<p class="lead text-align-justify">Loves challenges and has extreme passion for technology, has interest in the area of ​​data science, machine learning and IA. Loves to learn new technologies. At the moment, looking for a opportunity to work with Data Science.</p>
 				
    			</div>   			
 
