--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -127,7 +127,7 @@
 
    			<h3>Profile</h3>
 
-   			<p align="justify">Graduated in Information Systems at Centro Universitário Newton Paiva and Engineer of Machine Learning at Udacity.Experience with data science projects, involving data collection, data processing, data analysis, creation and evaluation of predictive models and storytelling.Domínio da linguagem de programação Python.Domain of the Python programming language.
+   			<p align="justify">Graduated in Information Systems at Centro Universitário Newton Paiva and Engineer of Machine Learning at Udacity.Experience with data science projects, involving data collection, data processing, data analysis, creation and evaluation of predictive models and storytelling.Domain of the Python programming language.
 
 </p>
 
@@ -237,7 +237,7 @@
 
    	<div class="row button-section">
    		<div class="col-twelve">
-   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Me contrate</a>
+   			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">HIRE ME</a>
    			<a href="https://drive.google.com/file/d/1Hedb77gr_3lFqQNpjgVQCwoXfXn3bwpF/view?" target="_blank"" usp=sharing  title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
