--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -142,7 +142,7 @@
    				</li>
    				<li>
    					<strong>Work:</strong>
-   					<span>Looking for a good opportunity</span>
+   					<span>Freelancer</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
@@ -255,7 +255,7 @@
    			<h5>Curriculum Vitae</h5>
    			<h1>More of my credentials</h1>
 
-   			<p class="lead">At the moment I'm looking for a opportunity to work with Data Science. I have experience with all the data science cicle.</p>
+   			<p class="lead">I have experience with all the data science cicle and ETL.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
